fix(small-stage): change spacings (#1142)

--- a/projects/ng-aquila/src/shared-styles/theming/tokens.scss
+++ b/projects/ng-aquila/src/shared-styles/theming/tokens.scss
@@ -1122,6 +1122,8 @@ $nx-theme: (
     small-stage-image-min-height: 64px,
     small-stage-image-max-height: 144px,
     small-stage-header-height: 64px,
+    small-stage-header-height-tablet: 32px,
+    small-stage-header-height-mobile: 32px,
     small-stage-header-padding: 16px 0 24px,
     small-stage-mobile-header-height: 32px,
     small-stage-mobile-header-padding: 16px 0,
@@ -1134,10 +1136,10 @@ $nx-theme: (
     small-stage-mobile-content-margin-bottom: 32px,
     small-stage-text-color: text-01,
     small-stage-default-background-color: ui-03,
-    small-stage-expert-header-height: 0,
+    small-stage-expert-header-height: 32px,
     small-stage-expert-header-padding: 16px 0 8px,
-    small-stage-expert-content-min-height: 72px,
-    small-stage-expert-content-margin-top: 32px,
+    small-stage-expert-content-min-height: 0,
+    small-stage-expert-content-margin-top: 0,
     small-stage-expert-content-margin-bottom: 32px,
     small-stage-expert-tablet-content-margin-bottom: 24px,
     small-stage-expert-mobile-content-margin-bottom: 16px,
