--- a/projects/ng-aquila/src/small-stage/small-stage.component.scss
+++ b/projects/ng-aquila/src/small-stage/small-stage.component.scss
@@ -60,17 +60,25 @@
     background-position: bottom left;
 }
 
-.header:not(:empty) {
+.header {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1 / -1;
     min-height: v(small-stage-header-height);
     padding: v(small-stage-header-padding);
     display: flex;
-}
 
-.header:empty {
-    display: none;
+    @include media-breakpoint-down(medium) {
+        min-height: v(small-stage-header-height-tablet);
+
+        &:empty {
+            padding: 0;
+        }
+    }
+
+    @include media-breakpoint-down(small) {
+        min-height: v(small-stage-header-height-mobile);
+    }
 }
 
 :host(:not(.is-expert)) {
@@ -187,13 +195,13 @@
         justify-content: flex-end;
     }
 
-    .header:not(:empty) {
+    .header {
         min-height: v(small-stage-expert-header-height);
         padding: v(small-stage-expert-header-padding);
     }
 
     @include media-breakpoint-up(medium) {
-        .header:not(:empty) ~ .content {
+        .content {
             min-height: v(small-stage-expert-content-min-height);
         }
     }
@@ -202,10 +210,6 @@
         .container {
             -ms-grid-columns: 8fr 4fr;
             grid-template-columns: 8fr 4fr;
-        }
-
-        .content {
-            margin-bottom: v(small-stage-expert-tablet-content-margin-bottom);
         }
 
         ::ng-deep [nxSmallStageImageEnd] {
@@ -224,8 +228,12 @@
             margin-bottom: v(small-stage-expert-mobile-content-margin-bottom);
         }
 
-        .header:not(:empty) {
+        .header {
             padding: v(small-stage-expert-mobile-header-padding);
+
+            &:empty {
+                padding: 0;
+            }
         }
 
         .image-end {
